started building readme up and fixed width measures of header to ensure it remains readable on smaller displays

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,7 +38,7 @@ header {
 .headtext {
     display: flex;
     justify-content: flex-end;
-    width: 33%;
+    width: 100%;
     height: 100%;
     align-items: center;
 }
@@ -48,7 +48,7 @@ header {
     align-items: center;
     justify-content: center;
     height: 100%;
-    width: 33%;
+    width: 100%;
 }
 
 .headpic img {
@@ -60,7 +60,7 @@ header {
 .headdesc {
     display: flex;
     height: 90%;
-    width: 33%;
+    width: 100%;
     align-items: flex-end;
     font-style: italic;
 }
